<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#fff"
    tools:context=".PrepaidInfoActivity">


    <ImageButton
        android:id="@+id/btn_quit"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:background="#fff"
        android:src="@drawable/icon_arrow_back_orange_24"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:src="@drawable/smartel_noback_logo"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout3"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/decreaseButton"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@color/white"
            android:scaleType="fitXY"
            android:src="@drawable/btn_magnifier_decrease"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/increaseButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/increaseButton"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/btn_magnifier_increase"
            android:background="@color/white"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="270dp"
        android:background="@drawable/box_whitesmoke"
        android:elevation="5dp"
        android:orientation="vertical"
        android:outlineProvider="background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/my_fee"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:text="@string/my_fee"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/carrierTextView"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="45dp"
            android:gravity="center_vertical"
            android:text="@string/carrier"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/my_fee" />

        <TextView
            android:id="@+id/ratePlanTextView"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="25dp"
            android:gravity="center_vertical"
            android:text="@string/rateNm"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/carrierTextView" />

        <TextView
            android:id="@+id/rateAmountTextView"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="25dp"
            android:gravity="center_vertical"
            android:text="@string/rateAmount"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ratePlanTextView" />

        <TextView
            android:id="@+id/rateAmountEmptyView"
            android:layout_width="150dp"
            android:layout_height="35dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="25dp"
            android:background="#fff"
            android:gravity="center_vertical"
            android:textSize="22sp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ratePlanTextView" />

        <TextView
            android:id="@+id/remainTextView"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="25dp"
            android:gravity="center_vertical"
            android:text="@string/remain"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rateAmountTextView" />

        <TextView
            android:id="@+id/remainTextView2"
            android:layout_width="200dp"
            android:layout_height="35dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="25dp"
            android:background="#fff"
            android:gravity="center_vertical"
            android:text="@string/remain2"
            android:textSize="22sp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rateAmountTextView" />


        <!--결과 항목 (Result)-->
        <TextView
            android:id="@+id/result_carrier"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="15dp"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/my_fee" />

        <TextView
            android:id="@+id/result_ratePlan"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="15dp"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/result_carrier" />

        <TextView
            android:id="@+id/result_rateAmount"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="15dp"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/result_ratePlan" />

        <TextView
            android:id="@+id/result_remain"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="15dp"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/result_rateAmount" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout4"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/box_whitesmoke"
        android:elevation="5dp"
        android:orientation="vertical"
        android:outlineProvider="background"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3">

        <TextView
            android:id="@+id/bankAccountTextView"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:text="@string/bankAndAccount"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/paymentWireTransfer"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bankAccountTextView" />

        <!--결과 항목-->
        <TextView
            android:id="@+id/result_bank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="40dp"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />


        <TextView
            android:id="@+id/result_bankAccount"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginEnd="5dp"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/btn_copy"
            app:layout_constraintTop_toBottomOf="@+id/result_bank" />

        <ImageButton
            android:id="@+id/btn_copy"
            android:layout_width="30sp"
            android:layout_height="35sp"
            android:layout_marginEnd="5dp"
            android:background="@color/white"
            android:src="@drawable/ic_copy_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/result_bank" />

        <ImageView
            android:id="@+id/nh_bank"
            android:layout_width="40dp"
            android:layout_height="35dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="5dp"
            android:src="@drawable/nh_icon"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@+id/result_bank"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <ImageView
            android:id="@+id/kb_bank"
            android:layout_width="40dp"
            android:layout_height="35dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="5dp"
            android:src="@drawable/kb_icon"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@+id/result_bank"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <ImageView
            android:id="@+id/ibk_bank"
            android:layout_width="40dp"
            android:layout_height="35dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="5dp"
            android:src="@drawable/ibk_icon"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@+id/result_bank"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <ImageView
            android:id="@+id/shinhan_bank"
            android:layout_width="40dp"
            android:layout_height="35dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="5dp"
            android:src="@drawable/shinhan_icon"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@+id/result_bank"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <ImageView
            android:id="@+id/woori_bank"
            android:layout_width="40dp"
            android:layout_height="35dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="5dp"
            android:src="@drawable/woori_icon"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@+id/result_bank"
            app:layout_constraintTop_toBottomOf="@+id/textView" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout5"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/box_whitesmoke"
        android:elevation="5dp"
        android:orientation="vertical"
        android:visibility="invisible"
        android:outlineProvider="background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout4">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/payKind"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_charge"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/btn_rectangle_orange"
            android:elevation="10dp"
            android:outlineProvider="background"
            android:text="@string/charge"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

<!--    <Button-->
<!--        android:id="@+id/btn_charge"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="50dp"-->
<!--        android:layout_marginHorizontal="20dp"-->
<!--        android:background="@drawable/btn_rectangle_orange"-->
<!--        android:elevation="10dp"-->
<!--        android:outlineProvider="background"-->
<!--        android:text="@string/charge"-->
<!--        android:textColor="#fff"-->
<!--        android:textSize="18sp"-->
<!--        android:visibility="visible"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/constraintLayout4" />-->




</androidx.constraintlayout.widget.ConstraintLayout>